--- a/entrega/ejercicio3/css/style.css
+++ b/entrega/ejercicio3/css/style.css
@@ -11,14 +11,41 @@
 }
 
 img{
-    width: 200px;
+    width: 180px;
     height: 100px;
 }
 
 hr{
-    border: 1px solid green;
+    margin-left: -10px;
+}
+
+strong{
+    margin: 0;
+}
+
+hr{
+    border: 2px solid green;
 }
 
 h1,h2,h3{
     color:green;
 }
+
+strong{
+    color:orange;
+}
+
+h1+p{
+    color:orange;
+}
+
+h2+p{
+    color:grey
+}
+
+.recuadro{
+    border: 2px solid;
+    border-style: dashed;
+    padding: 20px;
+}
+
