--- a/ut2/ejercicio3/style.css
+++ b/ut2/ejercicio3/style.css
@@ -8,7 +8,7 @@ tr th:first-of-type{
     text-align:left;
 }
 tr:first-of-type{
-    background-color:grey;
+    background-color:rgb(150, 15, 15);
     color:white;
     
 }
@@ -16,11 +16,8 @@ tr:first-of-type{
 
 /* cuerpo color */
 
-tr+tr+tr{
-    background-color:rgb(177, 177, 177);
-}
-tr+tr+tr+tr{
-    background-color:white;
+tr:nth-child(odd){
+    background-color:lightgrey;
 }
 
 /* alinear texto */
